fix firefox misalignment

--- a/src/app/shared/components/dialogs/dropdown-dialog/dropdown-dialog.component.scss
+++ b/src/app/shared/components/dialogs/dropdown-dialog/dropdown-dialog.component.scss
@@ -9,10 +9,9 @@
     margin-bottom: 0.5em;
     vertical-align: middle;
     line-height: 1.5;
+  }
 
-    app-paragraph {
-      margin: 0;
-      display: inline;
-    }
+  li::ng-deep app-paragraph p {
+    display: inline;
   }
 }
